--- a/client/src/components/Dashboard/styles.css
+++ b/client/src/components/Dashboard/styles.css
@@ -1,4 +1,11 @@
 @media print {
+  html,
+  body {
+    border: 1px solid white;
+    height: 99%;
+    page-break-after: avoid;
+    page-break-before: avoid;
+  }
   body * {
     visibility: hidden;
   }
@@ -11,6 +18,7 @@
     left: 0;
     top: 0;
   }
+
   @page {
     size: landscape;
   }
